@@ -1,41 +1,47 @@
 package com.example.testparttwo.servise.impl;
 
-import com.example.testparttwo.dto.TicketDto;
 import com.example.testparttwo.dto.UserDto;
 import com.example.testparttwo.entity.User;
-import com.example.testparttwo.mapper.TicketMapper;
-import com.example.testparttwo.mapper.UserMapper;
-import com.example.testparttwo.repo.TicketRepo;
+import com.example.testparttwo.mapper.MapperUser;
 import com.example.testparttwo.repo.UserRepo;
 import com.example.testparttwo.servise.UserService;
+import lombok.AllArgsConstructor;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@AllArgsConstructor
+@Component
 public class UserServiceImpl implements UserService {
 
-    private UserRepo userRepo;
-    private TicketRepo ticketrepo;
+    private final UserRepo userRepo;
+    private final MapperUser mapperUser;
 
     @Override
     public UserDto createUser(UserDto userDto) {
-        User user = UserMapper.revert(userDto);
-        User saveUser = userRepo.save(user);
-        return UserMapper.convert(saveUser);
+        User user = mapperUser.toEntity(userDto);
+        int saveUser = userRepo.save(user);
+        User inserted = userRepo.findById((long) saveUser);
+        return mapperUser.toDto(inserted);
     }
 
     @Override
     public UserDto getUser(Long userId) {
-        User user = userRepo.findById(userId)
-                .orElse(null);
-        return UserMapper.convert(user);
+        User user = userRepo.findById(userId);
+        return mapperUser.toDto(user);
     }
 
     @Override
-    public List<TicketDto> getAllPaidTicketsByUserId(Long userId, TicketDto ticketDto) {
-        return ticketrepo.findByUserId(userId)
-                .stream().map(TicketMapper::convert)
-                .filter(n -> n.getPaid())
-                .collect(Collectors.toList());
+    public List<UserDto> findAll() {
+        List<User> users = userRepo.findAll();
+        return users.stream().map(mapperUser::toDto).toList();
     }
+
+    @Override
+    public UserDto getByLogin(String login) {
+        User user = userRepo.findByLogin(login).orElse(null);
+        return mapperUser.toDto(user);
+    }
+
+
 }
